[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "reconstruction"
version = "0.1.0"
description = "Modular deconvolution algorithms for satellite imagery"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
]

[project.optional-dependencies]
gpu = ["cupy-cuda12x>=13.0"]
imaging = [
    "scikit-image>=0.21",
    "matplotlib>=3.7",
    "tifffile",
    "pillow",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]
all = ["reconstruction[gpu,imaging,dev]"]

[tool.setuptools.packages.find]
include = ["Reconstruction*"]

# ── pytest ──────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ── coverage ────────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["Reconstruction"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
